AC_INIT( libmpc8xx/mpc8xx.h )
AC_PREREQ(2.50)

AM_INIT_AUTOMAKE(mpc8xx,0.0.3)

AC_PREFIX_DEFAULT(/usr/local)

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)

AC_PROG_LIBTOOL

AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ example/Makefile ])
AC_CONFIG_FILES([ libmpc8xx/Makefile ])
AC_OUTPUT
